samples/_failures_safe/1761148633_dcb04d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e52dd8e.c: In function ‘main’:
./samples/SAFE/__tmp_7e52dd8e.c:145:5: error: expected expression at end of input
  145 |     mat1.cols = read_int("Enter number of columns (1-100): ",
      |     ^~~~
./samples/SAFE/__tmp_7e52dd8e.c:145:17: error: too few arguments to function ‘read_int’
  145 |     mat1.cols = read_int("Enter number of columns (1-100): ",
      |                 ^~~~~~~~
./samples/SAFE/__tmp_7e52dd8e.c:16:5: note: declared here
   16 | int read_int(const char* prompt, int min, int max) {
      |     ^~~~~~~~
./samples/SAFE/__tmp_7e52dd8e.c:145:5: error: expected declaration or statement at end of input
  145 |     mat1.cols = read_int("Enter number of columns (1-100): ",
      |     ^~~~
